force-app/main/default/objects/Fatura_icerik__c/Fatura_icerik__c.object-meta.xml
<CustomObject>
    <label>Fatura İçerik</label>
    <nameField>
        <label>Mal/Hizmet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fatura İçerikler</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>