force-app/main/default/objects/Fatura_icerik__c/fields/Birim_Fiyat__c.field-meta.xml
<CustomField>
    <fullName>Birim_Fiyat__c</fullName>
    <label>Birim_Fiyat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>