force-app/main/default/objects/Fatura_icerik__c/fields/KDV__c.field-meta.xml
<CustomField>
    <fullName>KDV__c</fullName>
    <label>KDV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>