force-app/main/default/objects/Fatura_icerik__c/fields/Miktar__c.field-meta.xml
<CustomField>
    <fullName>Miktar__c</fullName>
    <label>Miktar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>