force-app/main/default/objects/Fatura_icerik__c/fields/Musteri__c.field-meta.xml
<CustomField>
    <fullName>Musteri__c</fullName>
    <label>Musteri</label>
    <referenceTo>M_teri__c</referenceTo>
    <relationshipLabel>Fatura İçerikler</relationshipLabel>
    <relationshipName>Fatura_erikler</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>