force-app/main/default/objects/Fatura_icerik__c/fields/Tutar__c.field-meta.xml
<CustomField>
    <fullName>Tutar__c</fullName>
    <formula>(Birim_Fiyat__c  *  Miktar__c ) * IF ( ISPICKVAL( KDV__c , &quot;18&quot;) ,1.18, 1.19)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tutar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>